@@ -2,8 +2,16 @@
  * Copyright (c) 2007 Mockito contributors
  * This program is made available under the terms of the MIT License.
  */
-
 package org.mockitousage.spies;
+
+import static org.junit.Assert.fail;
+import static org.junit.Assume.assumeTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+import java.util.List;
 
 import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.ClassFileVersion;
@@ -17,15 +25,6 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 import org.mockitoutil.TestBase;
 
-import java.util.List;
-
-import static org.junit.Assert.fail;
-import static org.junit.Assume.assumeTrue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 @SuppressWarnings({"unchecked"})
 public class SpyingOnInterfacesTest extends TestBase {
 
@@ -33,9 +32,9 @@ public class SpyingOnInterfacesTest extends TestBase {
     public void shouldFailFastWhenCallingRealMethodOnInterface() throws Exception {
         List<?> list = mock(List.class);
         try {
-            //when
+            // when
             when(list.get(0)).thenCallRealMethod();
-            //then
+            // then
             fail();
         } catch (MockitoException e) {
         }
@@ -43,19 +42,19 @@ public class SpyingOnInterfacesTest extends TestBase {
 
     @Test
     public void shouldFailInRuntimeWhenCallingRealMethodOnInterface() throws Exception {
-        //given
+        // given
         List<Object> list = mock(List.class);
-        when(list.get(0)).thenAnswer(
-                new Answer<Object>() {
-                    public Object answer(InvocationOnMock invocation) throws Throwable {
-                        return invocation.callRealMethod();
-                    }
-                }
-        );
+        when(list.get(0))
+                .thenAnswer(
+                        new Answer<Object>() {
+                            public Object answer(InvocationOnMock invocation) throws Throwable {
+                                return invocation.callRealMethod();
+                            }
+                        });
         try {
-            //when
+            // when
             list.get(0);
-            //then
+            // then
             fail();
         } catch (MockitoException e) {
         }
@@ -63,48 +62,55 @@ public class SpyingOnInterfacesTest extends TestBase {
 
     @Test
     public void shouldAllowDelegatingToDefaultMethod() throws Exception {
-        assumeTrue("Test can only be executed on Java 8 capable VMs", ClassFileVersion.ofThisVm().isAtLeast(ClassFileVersion.JAVA_V8));
+        assumeTrue(
+                "Test can only be executed on Java 8 capable VMs",
+                ClassFileVersion.ofThisVm().isAtLeast(ClassFileVersion.JAVA_V8));
 
-        Class<?> type = new ByteBuddy()
-                .makeInterface()
-                .defineMethod("foo", String.class, Visibility.PUBLIC)
-                .intercept(FixedValue.value("bar"))
-                .make()
-                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
-                .getLoaded();
+        Class<?> type =
+                new ByteBuddy()
+                        .makeInterface()
+                        .defineMethod("foo", String.class, Visibility.PUBLIC)
+                        .intercept(FixedValue.value("bar"))
+                        .make()
+                        .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
+                        .getLoaded();
 
         Object object = mock(type);
 
-        //when
+        // when
         when(type.getMethod("foo").invoke(object)).thenCallRealMethod();
-        //then
+        // then
         Assertions.assertThat(type.getMethod("foo").invoke(object)).isEqualTo((Object) "bar");
         type.getMethod("foo").invoke(verify(object));
     }
 
     @Test
     public void shouldAllowSpyingOnDefaultMethod() throws Exception {
-        assumeTrue("Test can only be executed on Java 8 capable VMs", ClassFileVersion.ofThisVm().isAtLeast(ClassFileVersion.JAVA_V8));
+        assumeTrue(
+                "Test can only be executed on Java 8 capable VMs",
+                ClassFileVersion.ofThisVm().isAtLeast(ClassFileVersion.JAVA_V8));
 
-        Class<?> iFace = new ByteBuddy()
-                .makeInterface()
-                .defineMethod("foo", String.class, Visibility.PUBLIC)
-                .intercept(FixedValue.value("bar"))
-                .make()
-                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
-                .getLoaded();
+        Class<?> iFace =
+                new ByteBuddy()
+                        .makeInterface()
+                        .defineMethod("foo", String.class, Visibility.PUBLIC)
+                        .intercept(FixedValue.value("bar"))
+                        .make()
+                        .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
+                        .getLoaded();
 
-        Class<?> impl = new ByteBuddy()
-                .subclass(iFace)
-                .make()
-                .load(iFace.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
-                .getLoaded();
+        Class<?> impl =
+                new ByteBuddy()
+                        .subclass(iFace)
+                        .make()
+                        .load(iFace.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
+                        .getLoaded();
 
-        Object object = spy(impl.newInstance());
+        Object object = spy(impl.getConstructor().newInstance());
 
-        //when
+        // when
         Assertions.assertThat(impl.getMethod("foo").invoke(object)).isEqualTo((Object) "bar");
-        //then
+        // then
         impl.getMethod("foo").invoke(verify(object));
     }
 }
